--- a/MercurySlackAPI/MercurySlackAPI.csproj
+++ b/MercurySlackAPI/MercurySlackAPI.csproj
@@ -6,12 +6,23 @@
     <Description>A convinient package to make the Slack API easier to use than ever before with dotnet:)</Description>
     <PackageTags>Slack, SlackAPI, SlackClient</PackageTags>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>1.0.5</Version>
+    <Version>1.1.0</Version>
+    <PackageLicenseFile>LICENSE-2.0.txt</PackageLicenseFile>
+    <PackageProjectUrl />
+    <RepositoryUrl>https://github.com/TomyCatomy/MercurySlackAPI</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pagination" Version="3.0.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\Downloads\LICENSE-2.0.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
